Styling fixes and bug squashing around the temp uom. Reorganized codes to the appropriate modules

--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,21 @@
   padding: 0;
 }
 
-body, html {
-  display: flex;
+html, body {
   height: 100%;
-  width: 100%;
+}
+
+body {
+  flex-direction: column;
 }
 
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-  padding: 30px 0px;
+  padding: 0px 0px 10px 0px;
   background: rgb(55, 51, 51);
   color: white;
-  flex: 0;
 }
 
 header h1 {
@@ -25,7 +25,7 @@ header h1 {
 }
 
 header h1, header input {
-  margin: 20px 50px;
+  margin: 10px 10px;
 }
 
 input[type="search"] {
@@ -43,19 +43,27 @@ input[type="search"] {
 
 main {
   display: flex;
-  flex: 1;
   flex-direction: column;
-  align-items: center;
-  width: 300px;
+  gap: 20px;
+  height: 80%;
+  width: 100%;
+}
+
+.forecast {
+  display: flex;
   gap: 50px;
+  height: 100%;
+}
+
+.hourly-forecast, .current-forecast .day-forecast {
+  border-radius: 20px;
 }
 
 .hourly-forecast {
   display: flex;
+  width: 100%;
+  height: auto;
   overflow-x: auto;
-  align-items: center;
-  border: 2px solid rgb(247, 247, 247);
-  width: 75%;
 }
 
 .temp-uom {
@@ -78,35 +86,106 @@ button:hover {
   border: none;
 }
 
+h2 {
+  margin-bottom: 20px;
+}
+
+.hourly-container, .current-container {
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  height: 100%;
+  padding: 30px;
+}
+
+.hourly-container {
+  width: auto;
+  overflow-x: auto;
+}
+
+.day-forecast {
+  padding: 10px;
+  background: rgb(153 131 131 / 36%);
+}
 
 .weather-details {
-  width: 150px;
-  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 180px;
+  padding: 15px 0px;
 }
 
-.temp {
-  font-size: 30px;
-  font-weight: bolder;
+.temp-summary {
+  display: flex;
+  font-size: 18px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.weather-icon {
+.temp-summary img {
   height: 50px;
-  width: 50px;
 }
 
 .date {
-  font-size: 20px;
+  font-size: 15px;;
 }
 
-.feels-like {
-  font-size: 14px;
-}
-
-.condition {
+.temp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 18px;
+  font-weight: bolder;
+}
+
+.feels-like, .condition {
+  font-size: 13px;
 }
 
 .active {
   box-shadow: 0px 0px 4px 2px rgb(0, 166, 255);
   transform: scale(1.01);
+}
+
+@media (max-width: 1200px) {
+  body {
+    flex-direction: column;
+  }
+
+  header{ 
+    padding: 20px 0px;
+    gap: 0px;
+  }
+
+  header h1 {
+    margin: 0px;
+  }
+
+  .temp-uom button {
+    height: 20px;
+    width: 70px;
+  }
+
+  main {
+    width: 100%;
+  }
+
+  .forecast {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .hourly-container, .current-container {
+    padding: 0px 30px;
+    height: auto;
+  }
+
+  .current-container {
+    width: 220px;
+  }
+
+  .hourly-forecast {
+    gap: 2px;
+  }
 }
